# Comprobot

./: .gitignore  Dockerfile  LICENSE  README.md  _entry.py  api.py  bot.py  commands.py  data.py  functions.py  main.py  moderation.py  money_system.py  process.py  pyproject.toml  requirements.txt  setup.py  templates.py
.github/actions/: send.yml
.github/actions/send/: action.yml
.github/workflows/: claude-code-review.yml  install.yml  installation.yml  publish.yml  sync-deps.yml  test-linux.yml  test-macos.yml  test-windows.yml  testing.yml
Comprobot/: __main__.py  api.py  commands.py  data.py  functions.py  main.py  moderation.py  money_system.py  onboarding.py  process.py  templates.py
aur/: PKGBUILD
comprobot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: ai.toml  config.toml  data.py  error-messages.toml  keywords.toml  success_messages.toml
data/.do_not_touch/: conversation_history.toml  money.toml
debian/: changelog  control  postinst  rules
scripts/: syncing.py
src/: __main__.py  api.py  bot.py  buttons.py  commands.py  config.py  dashboard.py  data.py  functions.py  main.py  moderation.py  money_system.py  onboarding.py  process.py  start.py  templates.py  testing.py
